# sf-pkgen-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  about.hbs  about.toml  cog.toml  dist-workspace.toml  plan.md  release-plz.toml  renovate.json  specification.md
.github/workflows/: ci.yml  release-plz.yml  release.yml
docs/: architecture.md  demo.tape  plan-phase1.md  plan-phase2.md  specification.md
src/: ansi.rs  cli.rs  error.rs  inherit.rs  lib.rs  main.rs  non_interactive.rs  output.rs  sf_client.rs  signal.rs  tui.rs  wildcard.rs  xml.rs
src/tui/: app.rs  event.rs  fuzzy.rs  mod.rs  runner.rs  ui.rs
tests/: generate_test.rs
