[package]
name = "sf-pkgen"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/mahito1594/sf-pkgen-rs"
license = "MIT"
description = "Interactive Salesforce package.xml generator"
homepage = "https://github.com/mahito1594/sf-pkgen-rs"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
crossterm = "0.29.0"
ctrlc = "3.5.2"
nucleo-matcher = "0.3.1"
quick-xml = "0.39.0"
ratatui = "0.30.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.25.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
